--- a/index.html
+++ b/index.html
@@ -339,17 +339,16 @@
                                 <div class="mh-education-deatils">
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                        <h4>Art & Multimedia From <a href="#">Aptech University</a></h4>
+                                        <h4>ADSE  <a href="#">Aptech University</a></h4>
                                         <div class="mh-eduyear">2023-2025</div>
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a 
-                                        page when looking at its layout. The point of using  Lorem Ipsum </p>
+                                        <p>Advance diploma software Engineering </p>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                        <h4>Art & Multimedia From <a href="#">Middle sex University</a></h4>
+                                        <h4>ADSE <a href="#">Middle sex University</a></h4>
                                         <div class="mh-eduyear">2025-2027</div>
-                                        <p>It is a long established fact that a reader will be distracted by the readable content of a 
-                                        page when looking at its layout. The point of using  Lorem Ipsum </p>
+                                        <p>.......................................
+                                         </p>
                                     </div>                                
                                     <!-- Education Institutes-->
                                    
