--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     <span>Hello I'm</span>
                                 </div>
                                 
-                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Chidex</h2>
+                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Chidex Tech</h2>
                                 <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Ecommerce Designer</h4>
                                 
                                 <ul>
